- Add Windows 10 theme.


- Parallel Programming Library (PPL)
//C:\Users\Public\Documents\Embarcadero\Studio\15.0\Samples\CPP\RTL\Parallel Library
//http://docwiki.embarcadero.com/RADStudio/XE8/en/Tutorial:_Using_the_For_Loop_from_the_Parallel_Programming_Library
#include "System.Threading.hpp"


TParallel::For(NULL, 1, Max, MyIteratorEvent);
void __fastcall TFormThreading::MyIteratorEvent(TObject *Sender,int AIndex)
{
	if(IsPrime(AIndex))
	{
		TInterlocked::Increment(Tot);
	};
}




- Tune Ghostcript arguments http://encode.ru/threads/1589-FileOptimizer?p=44121&viewfull=1#post44121 (Necros).
- Add INI setting for optional independent compression levels for each file type (Newtomic).
- Add a technical section on the help file and website to detail how optimizations works, and lossless (alex).
- Add INI option ShutdownWhenDone=false to specify the OS to shutdown as soon as optimization of all files is done (guindos98).
- On Windows XP, log seems fine, but files get not processed and finally the original file deleted (Vivil).

- Multithreading support: 
	* http://op.htmsoft.com/articles/Articlea1-2-1.html
	* http://elvex.ugr.es/decsai/builder/threads/

- Implement a Statistic section in INI file: Total time, total opens, total files processed, total Mbytes porcessed, total Mbytes saved, ...

- Deletes files instead of processing them. https://sourceforge.net/p/nikkhokkho/discussion/fileoptimizer/thread/ced9a3af/ (Vivil).

- Make sure that 32 bit PNG images with few colors, keep transparency when converted to 8 bit PNG files (Newtomic).

- En rollover de grid poner el hint de su string y sin showparenthint.

- The ability to specify an output directory (Runner112).

- Truncate filenames in cell draw.

- Add ffmpeg
	KS_EXTENSION_MP4
	KS_EXTENSION_MPEG: AVI, MPG, MPEG
	KS_EXTENSION_FLV: FLV
	KS_EXTENSION_WMV: WMV, WMA 
	KS_EXTENSION_RM: RV, RA, RM, RMVB, RAM. SMIL
	ffmpeg.exe -i INPUT -vcodec copy -acodec copy OUTPUT


- Add Information option on context menu.
